--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -8,9 +8,6 @@
 }
 
 a {text-decoration: none;}
-#content{
-    height: 500px;
-}
 
 .wrapper {
     max-width: 1030px;
@@ -118,4 +115,102 @@ a {text-decoration: none;}
 }
 #footer * {
     font-family: proximanova,roboto,arial,sans-serif;
+}
+
+/* content */
+.clearfix {
+    display: block;
+}
+
+.news-listing.top-news:not(.small) {
+    width: 600px;
+    float: left;
+}
+.news-listing.top-news.small {
+    width: 328px;
+    float: right;
+}
+
+.clearfix:after {
+    content: ".";
+    display: block;
+    font-size: 0;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+.news-listing ul {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+.news-listing ul li {
+    list-style: none;
+    margin-bottom: 25px;
+}
+
+.secname {
+    font-family: Arial;
+    font-size: 11px;
+    font-weight: bold;
+    color: #c33;
+    text-transform: uppercase;
+    display: block;
+    margin-bottom: 5px;
+}
+
+.news-listing.top-news:not(.small) li h2 {
+    font-size: 28px;
+    line-height: 36px;
+    max-height: 72px;
+}
+.news-listing h2 {
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 20px;
+    line-height: 27px;
+    color: #333;
+    margin-bottom: 10px;
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    max-height: 72px;
+}
+.news-listing p {
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    max-height: 96px;
+    margin-bottom: 12px;
+}
+p {
+    font-family: Georgia,'Times New Roman',Times,serif;
+    font-size: 16px;
+    line-height: 24px;
+    color: #333;
+}
+.news-listing p ~ span {
+    position: relative;
+    margin-right: 20px;
+    display: inline-block;
+    margin-bottom: 10px;
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 12px;
+    color: gray;
+}
+.news-listing figure img {
+    width: 100%;
+    border-radius: inherit;
+    border: 1px solid #f9f9f9;
+}
+.news-listing.top-news:not(.small) figure {
+    height: 338px;
+}
+.news-listing figure {
+    width: 100%;
+    margin: 0 0 18px;
+    border-radius: 5px;
+    overflow: hidden;
+    position: relative;
 }
